[tool.poetry]
name = "p110-energy-monitor"
version = "0.1.0"
description = ""
authors = ["Matteo Martellini <git@mercxry.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
PyP100 = "^0.0.18"
influxdb-client = {extras = ["ciso"], version = "^1.25.0"}
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
