[tool.poetry]
name = "energy_monitor"
version = "0.1.0"
description = "Tapo P110 Energy Monitor"
authors = ["Matteo Martellini <git@mercxry.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
PyP100 = "^0.0.19"
influxdb-client = {extras = ["ciso"], version = "^1.25.0"}
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
